Version 0.3
===========

28.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated layout and look for members page
  * Updated layour and look for catgories page
  * Refactored users and tweets in their own partials
  * Reply and retweet functionality
  * More info for users

27.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Fixing the tweeting functionality
  * Added info with toggle function  

08.02.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Removed show user page and changed all show user links to point to user's twitter profile
  * Implemented design for users page, added additional user info (name, url, location)
  * Implemented design for categories page
  * Added counter_cache subscriptions_count in lists table
  * Moved create list to right area, added notification when user is not logged in
  * Bugfix: In category show display only tweets from that category

07.02.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Added drag and drop functionality for categories select
  * Bugfix: Draggable box is empty when there is no subscription
  * Added clear both after every second category tweets/members display in welcome page
  * Redirect to welcome page when user is not logged in and tries to access protected page
  * Refactoring: Changed singleton TWITTER_HTTP_ACCESS class into TwitterAccess module
  * Changed show user page to be public
  * Added lists_tweets table for tweets categorization
  * Query optimizations in welcome controller
  * Changed number of users / tweets per category to 5 on welcome page
  * Fixed user links on front page (/users/username -> /username)

27.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Added /login, /logout, /settings, /deactivate /username routes
  * Changed layout (user div box is top-right)
  * Moved all user settings into one place /settings
  * Bugfix: localization of pagination links