@@ -358,5 +358,19 @@
 .modal
   display: none
 
+form
+  .counter
+    position: absolute
+    right: 20px
+    top: 20px
+    font-size: 1.2em
+    font-weight: bold
+    color: #666
+
+  .warning
+    color: #600
+  .exceeded
+    color: #e00
+
 .clear
   clear: both
