@@ -5,7 +5,7 @@
     = stylesheet_link_tag 'compiled/text.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/application.css', :media => 'screen, projection'    
     = javascript_include_tag :defaults
-    = javascript_include_tag 'jquery.tools.min'
+    = javascript_include_tag 'jquery.tools.min', 'charCount'
     %link(rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico")
     %title
       = G140[:site_name]
