@@ -3,5 +3,5 @@
     %h2= t('global.tweet')
     - remote_form_for Tweet.new do
       = text_area_tag :tweet
-      = submit_tag t('global.send')
+      = submit_tag t('global.send'), :id => 'tweet_submit'
       = link_to_function t('global.cancel'), "closeOverlays()"
