@@ -9,6 +9,7 @@ Version 0.3
   * Refactored users and tweets in their own partials
   * Reply and retweet functionality
   * More info for users
+  * Limit tweets 
 
 27.03.2010
 ==========
